{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 88,
  "lineage": "2c8bb9c9-301c-5410-4852-ab01dd105571",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "axa_wassim_private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cdfcb9783eb43c45",
            "arn": "arn:aws:ec2:eu-west-3:289552921026:instance/i-0c7cb109ac08772b4",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7cb109ac08772b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ba611deef325d4e",
            "private_dns": "ip-10-0-2-205.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01910207c7be8c45d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bb5ad9cf66de7c6",
            "tags": {
              "Name": "axa_wassim_private_instance"
            },
            "tags_all": {
              "Name": "axa_wassim_private_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d66990c8533bf630"
            ]
          },
          "dependencies": [
            "aws_security_group.axa_wassim_private_sg",
            "aws_security_group.axa_wassim_public_sg",
            "aws_subnet.axa_wassim_private_subnet",
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "axa_wassim_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:289552921026:internet-gateway/igw-08ab025929b459256",
            "id": "igw-08ab025929b459256",
            "owner_id": "289552921026",
            "tags": {
              "Name": "axa_wassim_igw"
            },
            "tags_all": {
              "Name": "axa_wassim_igw"
            },
            "vpc_id": "vpc-09d2d84683979fd7c"
          },
          "dependencies": [
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "axa_wassim_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:289552921026:loadbalancer/app/axa-wassim-lb/23cfc5525e5a689c",
            "arn_suffix": "app/axa-wassim-lb/23cfc5525e5a689c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "axa-wassim-lb-152837390.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:289552921026:loadbalancer/app/axa-wassim-lb/23cfc5525e5a689c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "axa-wassim-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bd5aea68438c148c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0638f504c25184735"
              },
              {
                "subnet_id": "subnet-0ab288f1597de4e42"
              }
            ],
            "subnets": [
              "subnet-0638f504c25184735",
              "subnet-0ab288f1597de4e42"
            ],
            "tags": {
              "Name": "axa_wassim_lb"
            },
            "tags_all": {
              "Name": "axa_wassim_lb"
            },
            "vpc_id": "vpc-09d2d84683979fd7c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.axa_wassim_public_sg",
            "aws_subnet.axa_wassim_public_subnet_1",
            "aws_subnet.axa_wassim_public_subnet_2",
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "axa_wassim_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:289552921026:listener/app/axa-wassim-lb/23cfc5525e5a689c/0c01fdb13c81184d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:289552921026:targetgroup/axa-wassim-tg/7fd3c5cb66068309",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:289552921026:listener/app/axa-wassim-lb/23cfc5525e5a689c/0c01fdb13c81184d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:289552921026:loadbalancer/app/axa-wassim-lb/23cfc5525e5a689c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.axa_wassim_lb",
            "aws_lb_target_group.axa_wassim_tg",
            "aws_security_group.axa_wassim_public_sg",
            "aws_subnet.axa_wassim_public_subnet_1",
            "aws_subnet.axa_wassim_public_subnet_2",
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "axa_wassim_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:289552921026:targetgroup/axa-wassim-tg/7fd3c5cb66068309",
            "arn_suffix": "targetgroup/axa-wassim-tg/7fd3c5cb66068309",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:289552921026:targetgroup/axa-wassim-tg/7fd3c5cb66068309",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:289552921026:loadbalancer/app/axa-wassim-lb/23cfc5525e5a689c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "axa-wassim-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d2d84683979fd7c"
          },
          "dependencies": [
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "axa_wassim_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:289552921026:route-table/rtb-0862d1978f697ff29",
            "id": "rtb-0862d1978f697ff29",
            "owner_id": "289552921026",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ab025929b459256",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "axa_wassim_public_rt"
            },
            "tags_all": {
              "Name": "axa_wassim_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2d84683979fd7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.axa_wassim_igw",
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "axa_wassim_public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfbf508963181042",
            "route_table_id": "rtb-0862d1978f697ff29",
            "subnet_id": "subnet-0638f504c25184735"
          },
          "dependencies": [
            "aws_internet_gateway.axa_wassim_igw",
            "aws_route_table.axa_wassim_public_rt",
            "aws_subnet.axa_wassim_public_subnet_1",
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "axa_wassim_public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd5407dc07d86f96",
            "route_table_id": "rtb-0862d1978f697ff29",
            "subnet_id": "subnet-0ab288f1597de4e42"
          },
          "dependencies": [
            "aws_internet_gateway.axa_wassim_igw",
            "aws_route_table.axa_wassim_public_rt",
            "aws_subnet.axa_wassim_public_subnet_2",
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "axa_wassim_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:289552921026:security-group/sg-0d66990c8533bf630",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d66990c8533bf630",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd5aea68438c148c"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20240919124909867800000001",
            "name_prefix": "terraform-",
            "owner_id": "289552921026",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "axa_wassim_private_sg"
            },
            "tags_all": {
              "Name": "axa_wassim_private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2d84683979fd7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.axa_wassim_public_sg",
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "axa_wassim_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:289552921026:security-group/sg-0bd5aea68438c148c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0bd5aea68438c148c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20240919113446710900000001",
            "name_prefix": "terraform-",
            "owner_id": "289552921026",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "axa_wassim_public_sg"
            },
            "tags_all": {
              "Name": "axa_wassim_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d2d84683979fd7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "axa_wassim_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:289552921026:subnet/subnet-05bb5ad9cf66de7c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bb5ad9cf66de7c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "289552921026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "axa_wassim_private_subnet"
            },
            "tags_all": {
              "Name": "axa_wassim_private_subnet"
            },
            "vpc_id": "vpc-09d2d84683979fd7c"
          },
          "dependencies": [
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "axa_wassim_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:289552921026:subnet/subnet-0638f504c25184735",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0638f504c25184735",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "289552921026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "axa_wassim_public_subnet_1"
            },
            "tags_all": {
              "Name": "axa_wassim_public_subnet_1"
            },
            "vpc_id": "vpc-09d2d84683979fd7c"
          },
          "dependencies": [
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "axa_wassim_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:289552921026:subnet/subnet-0ab288f1597de4e42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab288f1597de4e42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "289552921026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "axa_wassim_public_subnet_2"
            },
            "tags_all": {
              "Name": "axa_wassim_public_subnet_2"
            },
            "vpc_id": "vpc-09d2d84683979fd7c"
          },
          "dependencies": [
            "aws_vpc.axa_wassim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "axa_wassim_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:289552921026:vpc/vpc-09d2d84683979fd7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c48ae61e7cb94f6",
            "default_route_table_id": "rtb-0ac838bafb211449a",
            "default_security_group_id": "sg-0753b2dcb9d31d7a7",
            "dhcp_options_id": "dopt-72fa3d1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d2d84683979fd7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac838bafb211449a",
            "owner_id": "289552921026",
            "tags": {
              "Name": "axa_wassim_vpc"
            },
            "tags_all": {
              "Name": "axa_wassim_vpc"
            }
          }
        }
      ]
    }
  ]
}